<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_white_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/standard_margin_start"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" android:visibility="visible"/>

        <TextView
            android:id="@+id/yourMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/standard_margin_start"
            android:gravity="center"
            android:text="Your Message"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnOK"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/standard_margin_start"
                android:text="@string/ok"
                android:textColor="@android:color/white"
                android:background="@drawable/primary_button"
                android:layout_marginStart="@dimen/standard_margin_start" />


            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/standard_margin_start"
                android:text="@string/cancel"
                android:background="@drawable/secondary_button"
                android:layout_marginStart="@dimen/standard_margin_start"
                android:layout_marginEnd="@dimen/standard_margin_end"
                android:textColor="@android:color/black" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>