<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.nytimes.app_fragments_modules.news.NewsListingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/no_media_content_available"
                android:layout_height="match_parent" />
            <ImageView
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:id="@+id/newsLargeIV"
                android:src="@drawable/ic_news_sample"
                android:layout_height="match_parent" />
        </FrameLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/standard_margin_start"
                    android:layout_marginEnd="@dimen/standard_margin_end"
                    android:layout_marginTop="@dimen/standard_margin_start"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/news_publish_date"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/field_header_name"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/not_available"
                        android:id="@+id/newsPublishedDateTV"
                        android:textSize="12sp"
                        android:layout_marginStart="8dp"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content" />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/standard_margin_start"
                    android:layout_marginEnd="@dimen/standard_margin_end"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/news_by"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/field_header_name"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/not_available"
                        android:id="@+id/newsPublishedByTV"
                        android:textSize="12sp"
                        android:layout_marginStart="8dp"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/standard_margin_end"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:text="@string/no_media_content_available"
                        android:id="@+id/newsMediaCaptionTV"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        android:lineSpacingExtra="@dimen/line_spacing"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.20"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="28dp"
                            android:src="@drawable/ic_news_viewed"
                            android:layout_height="28dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/newssViewedTV"
                            android:text="0"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:textColor="@android:color/black"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/about_news"
                    android:textColor="@color/field_header_name"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/standard_margin_start"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/not_available"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:layout_marginTop="4dp"
                    android:id="@+id/aboutNewsTV"
                    android:lineSpacingExtra="@dimen/line_spacing"
                    android:layout_marginStart="@dimen/standard_margin_start"
                    android:layout_marginEnd="@dimen/standard_margin_end"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/news_source"
                    android:textColor="@color/field_header_name"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/standard_margin_start"
                    android:layout_marginTop="@dimen/standard_margin_start"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/not_available"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:layout_marginTop="4dp"
                    android:id="@+id/newsSourceTV"
                    android:lineSpacingExtra="@dimen/line_spacing"
                    android:layout_marginStart="@dimen/standard_margin_start"
                    android:layout_marginEnd="@dimen/standard_margin_end"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/read_more_news"
                    android:id="@+id/newsLinkTV"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/standard_margin_start"
                    android:layout_gravity="end"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_marginEnd="@dimen/standard_margin_end"
                    android:textColor="@color/link_color"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </ScrollView>

    </LinearLayout>
    <TextView style="@style/style_news_copyright_label" android:layout_gravity="bottom" android:id="@+id/copyrightTV" />
</FrameLayout>
